fix: add whitespace to username when it is too long

--- a/MKW/src/app/modules/content/pages/content-reviewer-page/content-reviewer-page.component.scss
+++ b/MKW/src/app/modules/content/pages/content-reviewer-page/content-reviewer-page.component.scss
@@ -22,7 +22,6 @@ ion-header {
     margin: 1rem 0;
     position: relative;
     display: flex;
-    align-items: center;
 
     .profile-picture {
       width: 4rem;
@@ -46,8 +45,9 @@ ion-header {
       .profile-username {
         color: var(--mkw-color-dark-medium);
         word-wrap: break-word;
-        line-height: 0;
+        line-height: 1;
         margin-top: -.1rem;
+        line-break: anywhere;
       }
     }
 
