--- a/MKW/src/app/shared/components/content-review-card/content-review-card.component.scss
+++ b/MKW/src/app/shared/components/content-review-card/content-review-card.component.scss
@@ -18,6 +18,7 @@
     .profile-information {
       display: flex;
       align-items: center;
+      max-width: 80%;
 
       .user-pfp {
         border-radius: 50%;
@@ -28,9 +29,16 @@
         font-family: 'Poppins', 'sans-serif';
         font-weight: 450;
         font-size: 1rem;
-        line-height: 1;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis; 
         padding-left: 0.4em;
       }
+    }
+
+    .publish-timestamp {
+      font-family: 'Poppins', sans-serif;
+      font-weight: lighter;
     }
   }
 
