--- a/MKW/src/app/shared/components/kebab-menu/kebab-menu.component.scss
+++ b/MKW/src/app/shared/components/kebab-menu/kebab-menu.component.scss
@@ -14,6 +14,10 @@
       padding-right: .75rem;
       padding-left: 0;
     }
+
+    .kebab-menu-icon {
+      max-width: unset;
+    }
   }
 
   .items {
